src/objects/MarketAssessment__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <description>Additional Information</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AwareofOpportunity__c</fullName>
        <description>We were aware of this opportunity prior to the RFP being issued and have pre-positioned for this work</description>
        <label>Aware of Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DecisionMaker__c</fullName>
        <description>We know who will be making the decision on the client’s behalf</description>
        <label>Decision Maker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DecisiontoAppoint__c</fullName>
        <description>The client’s decision to appoint will predominantly be made on factors other than price</description>
        <label>Decision to Appoint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DocumentedBusinessPlan__c</fullName>
        <description>This work is consistent with our documented business plan, strategic business aims and corporate values</description>
        <label>Documented Business Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DocumentedKeyAccount__c</fullName>
        <description>This is a documented key account or a client from whom we anticipate significant long term revenues</description>
        <label>Documented Key Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpertWitnessorLitigationSupport__c</fullName>
        <label>Expert Witness or Litigation Support</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreeFormAwareofOpportunity__c</fullName>
        <description>We were aware of this opportunity prior to the RFP being issued and have pre-positioned for this work.</description>
        <label>Free-Form Aware of Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormDecisionMaker__c</fullName>
        <description>We know who will be making the decision on the client’s behalf</description>
        <label>Free-Form Decision Maker</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormDecisiontoAppoint__c</fullName>
        <description>The client’s decision to appoint will predominantly be made on factors other than price</description>
        <label>Free-Form Decision to Appoint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormDocumentedBusinessPlan__c</fullName>
        <description>This work is consistent with our documented business plan, strategic business aims and corporate values</description>
        <label>Free-Form Documented Business Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormDocumentedKeyAccount__c</fullName>
        <description>This is a documented key account or a client from whom we anticipate significant long term revenues</description>
        <label>Free Form Documented Key Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormIncumbent__c</fullName>
        <description>There is no incumbent or AECOM is the incumbent</description>
        <label>Free-Form Incumbent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormPotentialConflictofInterest__c</fullName>
        <label>Free-Form Potential Conflict of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormRecentProjectExperience__c</fullName>
        <description>We have the required and recent project experience to do this project</description>
        <label>Free-Form Recent Project Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormRequiredTechnicalPersonnel__c</fullName>
        <description>We have the required technical personnel available with the right and recent experience to do this project</description>
        <label>Free-Form Required Technical Personnel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormStrongClientRelationship__c</fullName>
        <description>We have a strong relationship with this client</description>
        <label>Free-Form Strong Client Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormStrongPositiveWin__c</fullName>
        <description>We are in a strong position to win and deliver this project relative to our competitors</description>
        <label>Free-Form Strong Positive Win</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FreeFormSufficientTimeandResources__c</fullName>
        <description>We have sufficient time and the right resources (both technical and marketing) to prepare a winning bid</description>
        <label>Free-Form Sufficient Time and Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <description>There is no incumbent or AECOM is the incumbent</description>
        <label>Incumbent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JVinvolvement__c</fullName>
        <label>JV involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potentialconflictofinterestissues__c</fullName>
        <label>Potential conflict of interest issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramManagementServices__c</fullName>
        <label>Program Management Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionnaireSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Set</label>
        <referenceTo>QuestionnaireSet__c</referenceTo>
        <relationshipLabel>Market Assessments</relationshipLabel>
        <relationshipName>MarketAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFPDevelopmentServices__c</fullName>
        <label>RFP Development Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecentProjectExperience__c</fullName>
        <description>We have the required and recent project experience to do this project</description>
        <label>Recent Project Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequiredTechnicalPersonnel__c</fullName>
        <description>We have the required technical personnel available with the right and recent experience to do this project.</description>
        <label>Required Technical Personnel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskAndMarketAssessmentApproved__c</fullName>
        <formula>ISPICKVAL(QuestionnaireSet__r.ApprovalStatus__c,&quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;M Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StaffAugmentationorembeddedworkforce__c</fullName>
        <label>Staff Augmentation or embedded workforce</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StrongClientRelationship__c</fullName>
        <description>We have a strong relationship with this client</description>
        <label>Strong Client Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StrongPositiveWin__c</fullName>
        <description>We are in a strong position to win and deliver this project relative to our competitors</description>
        <label>Strong Positive Win</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SufficientTimeandResources__c</fullName>
        <description>We have sufficient time and the right resources (both technical and marketing) to prepare a winning bid</description>
        <label>Sufficient Time and Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Market Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RiskAndMarketAssessmentApproved__c</columns>
        <columns>QuestionnaireSet__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Market Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Eco_Market_Assessment_Cannot_Change</fullName>
        <active>true</active>
        <description>The Market Assessment cannot be changed once the R&amp;M is submitted for approval.</description>
        <errorConditionFormula>RiskAndMarketAssessmentApproved__c = True</errorConditionFormula>
        <errorMessage>The Market Assessment cannot be changed if the Risk and Market Assessment is Pending Approval or Approved.</errorMessage>
    </validationRules>
</CustomObject>